FMX-1042 Fixed display error when text is too long

--- a/apps/fixmystreet/static/css/fms.css
+++ b/apps/fixmystreet/static/css/fms.css
@@ -3908,3 +3908,6 @@ div.carousel-inner{
 	max-width:100px;
 	max-height:100px;
 }
+.spaced{
+	line-height: 25px;
+}
